--- a/web/index.html
+++ b/web/index.html
@@ -8,5 +8,15 @@
 </head>
 <body>
     <h1>mijn cheatsheet</h1>
+
+    <h2>commandprompt</h2>
+    <ul>
+        <li><b>cd</b> change directory </li>
+        <li><b>dir</b> show contents directory</li>
+    </ul>
+    <h2>github</h2>
+    <ul>
+        <li><b>git init</b> start repository</li>
+    </ul>
 </body>
 </html>
